--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MyActivity</string>
+    <string name="app_name">Kantega-app</string>
+    <string name="overview">Oversikt</string>
+    <string name="transaction">Transaksjon</string>
+    <string name="recurring">Faste utgifter</string>
+    <string name="history">Historikk</string>
+    <string name="description">Hei og hopp!</string>
+    <string name="temp">Overview - hei og hopp!</string>
 </resources>
