--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -81,6 +81,14 @@ LatexCommand tableofcontents
 Innledning
 \end_layout
 
+\begin_layout Standard
+Formålet med dette dokumentet er å beskrive, analysere og definere høy-nivå
+ krav og funksjoner for en Android-applikasjon, som skal hjelpe privatpersoner
+ med sin økonomi.
+ Dokumentet fokuserer på funksjonene som kreves av interessentene og hvorfor
+ disse eksisterer.
+\end_layout
+
 \begin_layout Section
 Hensikt
 \end_layout
