Pagebreaks after title and TOC

--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -66,12 +66,20 @@ and
 \begin_layout Date
 14.
  februar 2011
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
 \begin_inset CommandInset toc
 LatexCommand tableofcontents
 
+\end_inset
+
+
+\begin_inset Newpage pagebreak
 \end_inset
 
 
