--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -174,7 +174,7 @@ Som resultat av dette
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+har man ikke oversikt over sin egen økonomi.
 \end_layout
 
 \end_inset
