--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -457,8 +457,21 @@ Produktoversikt
 Produktets rolle i brukermiljøet
 \end_layout
 
+\begin_layout Standard
+Produktets rolle er å hjelpe personer med sin privatøkonomi.
+ Produktet blir benyttet av privatpersoner i situasjoner hvor det er naturlig
+ å planlegge eller organisere transaksjoner.
+\end_layout
+
 \begin_layout Subsection
 Forutsetninger og avhengigheter
+\end_layout
+
+\begin_layout Standard
+Forutsetningene er at brukeren enten fører transaksjoner manuelt eller at
+ man setter opp en integrasjon mot banken.
+ Hvis integrasjon er mulig skal man kunne kategorisere bevegelser automatisk.
+ Produktet er avhengig av å kjøre på en Android-basert smarttelefon.
 \end_layout
 
 \begin_layout Standard
@@ -472,6 +485,54 @@ Forutsetninger og avhengigheter
 Produktets funksjonelle egenskaper
 \end_layout
 
+\begin_layout Itemize
+Må kunne vise en enkelt oversikt over privatøkonomi
+\end_layout
+
+\begin_layout Itemize
+Kategorisert oversikt over forbruk (mat, klær, fornøyelser o.l.)
+\end_layout
+
+\begin_layout Itemize
+Synkronisering med bankkonto
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Automatisert kategorisering av bevegelser
+\end_layout
+
+\begin_layout Itemize
+Mulighet for å bytte bank
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Fortløpende oversikt over transaksjoner
+\end_layout
+
+\begin_layout Itemize
+Mulighet for å planlegge utgifter på sikt
+\end_layout
+
+\begin_layout Itemize
+Visuell indikasjon på egen økonomisk situasjon
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Figur som viser nåværende balanse
+\end_layout
+
+\begin_layout Itemize
+Simpel statistikk
+\end_layout
+
+\begin_layout Itemize
+Diagram som viser forbruk over en gitt periode
+\end_layout
+
+\end_deeper
 \begin_layout Standard
 \begin_inset Newpage pagebreak
 \end_inset
@@ -481,6 +542,10 @@ Produktets funksjonelle egenskaper
 
 \begin_layout Section
 Ikke-funksjonelle egenskaper og andre krav
+\end_layout
+
+\begin_layout Standard
+
 \end_layout
 
 \end_body
