--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -428,10 +428,6 @@ ha et oversiktlig og intuitivt grensesnitt, som i tillegg er mobilt
 Overordnet beskrivelse av interessenter og brukere
 \end_layout
 
-\begin_layout Standard
-test :D:D:
-\end_layout
-
 \begin_layout Subsection
 Oppsummering interessenter
 \end_layout
@@ -946,7 +942,7 @@ Prosjektoppgaven skal være ferdigstilt og innlevert innen 25.
 \end_layout
 
 \begin_layout Itemize
-Vi skal følge scrum som utviklingsprosess under prosjektet.
+Vi skal følge Scrum som utviklingsprosess under prosjektet.
 \end_layout
 
 \begin_layout Itemize
