--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -942,7 +942,7 @@ Rammebetingelser
 
 \begin_layout Itemize
 Prosjektoppgaven skal være ferdigstilt og innlevert innen 25.
- mail 2011
+ mai 2011
 \end_layout
 
 \begin_layout Itemize
