--- a/docs/forstudierapport.lyx
+++ b/docs/forstudierapport.lyx
@@ -1266,8 +1266,8 @@ Produktets funksjonelle egenskaper
 \begin_layout Standard
 Produktet i sin ferdige form skal kunne vise en enkel oversikt over privatøkonom
 i.
- Oversikten over fforbruk bør bære kategorisert og delt opp i ulike deler,
- som for eksempel mat, klær og fornøyelser.
+ Dette innebærer følgende funksjonalitet som vi har kommet frem til gjennom
+ utredning av oppgaven.
 \end_layout
 
 \begin_layout Itemize
